data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2133.wast
;; 4. **Test Description**: Create a nested `block` structure where a `br` instruction references an incorrect label index, checking immediate termination versus infinite execution.    - **Constraint**: Ensures accurate jump target resolution and prevents loops caused by incorrect label references.

(assert_invalid
  (module (func $incorrect-label-index (result i32)
    (block (result i32) (block (br 2)) (i32.const 0))
  ))
  "label index out of range"
)